# cstring_jslike

./: .gitmodules  .travis.yml  CMakeLists.txt  cstring_jslike.c  cstring_jslike.h  test.c
test/: CMakeLists.txt  common.h  test_string.c  test_string_base.c  test_utf8_method.c
